backend: rename methods to be clearer in openApi
